# backend/gen/go/api/proto/sbom/v1/component.pb.go
@@ -34,6 +34,8 @@ type Component struct {
 	Children           []*Component           `protobuf:"bytes,9,rep,name=children,proto3" json:"children,omitempty"`
 	Vulnerabilities    []*Vulnerability       `protobuf:"bytes,10,rep,name=vulnerabilities,proto3" json:"vulnerabilities,omitempty"`
 	HasTransitiveVulns bool                   `protobuf:"varint,11,opt,name=has_transitive_vulns,json=hasTransitiveVulns,proto3" json:"has_transitive_vulns,omitempty"`
+	MaxSeverity        float32                `protobuf:"fixed32,12,opt,name=max_severity,json=maxSeverity,proto3" json:"max_severity,omitempty"`
+	TotalCveCount      int32                  `protobuf:"varint,13,opt,name=total_cve_count,json=totalCveCount,proto3" json:"total_cve_count,omitempty"`
 	unknownFields      protoimpl.UnknownFields
 	sizeCache          protoimpl.SizeCache
 }
@@ -145,11 +147,25 @@ func (x *Component) GetHasTransitiveVulns() bool {
 	return false
 }
 
+func (x *Component) GetMaxSeverity() float32 {
+	if x != nil {
+		return x.MaxSeverity
+	}
+	return 0
+}
+
+func (x *Component) GetTotalCveCount() int32 {
+	if x != nil {
+		return x.TotalCveCount
+	}
+	return 0
+}
+
 var File_api_proto_sbom_v1_component_proto protoreflect.FileDescriptor
 
 const file_api_proto_sbom_v1_component_proto_rawDesc = "" +
 	"\n" +
-	"!api/proto/sbom/v1/component.proto\x12\x14cyclonedx_ui.sbom.v1\x1a%api/proto/sbom/v1/vulnerability.proto\"\x94\x03\n" +
+	"!api/proto/sbom/v1/component.proto\x12\x14cyclonedx_ui.sbom.v1\x1a%api/proto/sbom/v1/vulnerability.proto\"\xdf\x03\n" +
 	"\tComponent\x12\x12\n" +
 	"\x04name\x18\x01 \x01(\tR\x04name\x12\x14\n" +
 	"\x05group\x18\x02 \x01(\tR\x05group\x12\x18\n" +
@@ -162,7 +178,9 @@ const file_api_proto_sbom_v1_component_proto_rawDesc = "" +
 	"\bchildren\x18\t \x03(\v2\x1f.cyclonedx_ui.sbom.v1.ComponentR\bchildren\x12M\n" +
 	"\x0fvulnerabilities\x18\n" +
 	" \x03(\v2#.cyclonedx_ui.sbom.v1.VulnerabilityR\x0fvulnerabilities\x120\n" +
-	"\x14has_transitive_vulns\x18\v \x01(\bR\x12hasTransitiveVulnsB\a\n" +
+	"\x14has_transitive_vulns\x18\v \x01(\bR\x12hasTransitiveVulns\x12!\n" +
+	"\fmax_severity\x18\f \x01(\x02R\vmaxSeverity\x12&\n" +
+	"\x0ftotal_cve_count\x18\r \x01(\x05R\rtotalCveCountB\a\n" +
 	"\x05_purlBBZ@github.com/Qvineox/cyclonedx-ui/gen/go/api/proto/sbom/v1;sbom_v1b\x06proto3"
 
 var (
